[B]Version 1.1.8[/B]
fixed: daftsex
fixed: porngo search
Added the possibility to display the duration and quality of the video using the ListItem properties (selectable in settings, default is duration and quality added to filename).
fixed: paradisehill covers