@@ -1,0 +1,2 @@
+Site URL: https://www.xozilla.com/
+DMCA: https://www.xozilla.com/dmca/
