@@ -57,7 +57,9 @@ convertdict = {23: 'xtheatre.XTVideo',
                682: 'pornvibe.pornvibe_play',
                692: 'porngo.Play',
                742: 'freepornstreams.Playvid',
+               752: 'xmoviesforyou.Playvid',
                762: 'viralvideosporno.Playvid',
+               772: 'xozilla.Playvid',
                782: 'speedporn.Playvid',
                922: 'hentaidude.hentaidude_play',
                932: 'cpv.Playvid',
